# nasser-search-protocol

./: README.md  configs.ts  package.json  tsconfig.json
common/: Header.tsx  LoadingSpinner.tsx
hooks/: useWalletId.tsx
pages/: _app.tsx  index.tsx
providers/: EnvironmentProvider.tsx
public/: manifest.json
search-contracts/: .gitignore  Anchor.toml  package.json  tsconfig.json
search-contracts/programs/search-contracts/: Cargo.toml
search-contracts/programs/search-contracts/src/: errors.rs  lib.rs  state.rs
search-contracts/programs/search-contracts/src/instructions/: end_session.rs  init_resource.rs  init_session.rs  mod.rs  start_session.rs
search-contracts/src/: accounts.ts  apis.ts  constants.ts  instructions.ts  pdas.ts  transactions.ts  utils.ts
search-contracts/src/idl/: search_contracts.ts
search-contracts/tests/: search-contracts.ts
styles/: globals.css
wallet/: index.tsx  solana.tsx  unified-wallet.tsx  useSolBalance.ts  web3auth.tsx
